--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 <body>
     <div class="container">
         <div class="header">
-            <input type="text" class="search-box" placeholder="Enter Your City" spellcheck="false">
-            <img src="icons8-search-50.png" class="search-icon" alt="search">
+            <div class="search-box">
+                <input type="text" class="search-bar" placeholder="Enter Your City" spellcheck="false">
+                <img src="microphone_off.png" alt="" class="microphone">
+            </div>
+            <img src="search.png" class="search-icon" alt="search">
+            <img src="voice-recognition.png" alt="" class="text-to-speech">
         </div>
 
         <div class="main">
@@ -21,7 +25,7 @@
 
         <div class="footer">
             <div class="humidity-box">
-                <img src="icons8-humidity-64.png" class="humidity-icon" alt="">
+                <img src="humidity.png" class="humidity-icon" alt="">
                 <div class="humidity">
                     <div class="val"></div>
                     <p>Humidity</p>
@@ -29,7 +33,7 @@
             </div>
             
             <div class="wind-box">
-                <img src="icons8-wind-50.png" class="wind-icon" alt="">
+                <img src="wind.png" class="wind-icon" alt="">
                 <div class="wind">
                     <div class="val"></div>
                     <p>Wind Speed</p>
